--- a/anx/updates.html
+++ b/anx/updates.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>更新日志</title>
-    <link href="js-css/color.css" rel="stylesheet">
+    <link href="/anx/js-css/color.css" rel="stylesheet">
   </head>
   <body>
     <address></address>
@@ -47,7 +47,7 @@
       <address></address>
       <a>4.新增更新日志。</a>
       <address></address>
-      <a>5.更改域名为“gssy2025eb”</a>
+      <a>5.更改域名为“gssy2025eb.github.io”</a>
       <address></address>
       <a>6.因一些问题，暂时下架语言选择模块。</a>
       <address></address>
@@ -163,7 +163,7 @@
           <div class="col-12">
             <p>Copyright © lixin. All rights reserved.</p>
             <p>注：本网站托管于Github，感谢所有对本网站提供支持的个人及团队！</p>
-            <a href="https://gssy2025eb.github.io/index.html" class="btn btn-primary">返回主页</a>
+            <a href="/index.html" class="btn btn-primary">返回主页</a>
             <a href="https://github.com/gssy2025eb/gssy2025eb.github.io.git" class="btn btn-primary">前往Github仓库</a>
           </div>
         </div>
