--- a/index.html
+++ b/index.html
@@ -1,175 +1,227 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
+<html lang="zh">
+<head>
+  <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>关上实验学校 初一(2)班</title>
-    <link href="anx/js-css/color.css" rel="stylesheet">
-  </head>
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <a class="navbar-brand" href="https://github.com/gssy2025eb/gssy2025eb.github.io.git">初一（2）班</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>关上实验学校 初二(2)班</title>
+  <link href="/anx/js-css/color.css" rel="stylesheet">
+  <link href="/anx/js-css/color.css" rel="stylesheet" id="dark-mode">
+  <style>
+    .center1 {
+      text-align: center;
+      margin: auto;
+      display: block;
+    }
+    .lang-select-R {
+      position: absolute;
+      top: 52px;
+      right: 20px;
+    }
+    .lang-select-L {
+    position: absolute;
+      top: 10px;
+      left: 10px;
+    }
+  </style>
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="https://github.com/gssy2025eb/gssy2025eb.github.io.git">初二（2）班</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="https://gssy2025eb.github.io/">主页 <span class="sr-only">主页</span></a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">活动</a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/act/20230601/index.html">2023-六一</a>
-                <a class="dropdown-item" href="/act/202304/index.html">2023-春游</a>
-                <a class="dropdown-item" href="/act/202211/index.html">2022-运动会</a>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/index.html">主页<span class="sr-only">主页</span></a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">活动</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/act/20230601/index.html">2023-六一</a>
+              <a class="dropdown-item" href="/act/202304/index.html">2023-春游</a>
+              <a class="dropdown-item" href="/act/202211/index.html">2022-运动会</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/anx/updates.html">更新日志<span class="sr-only">更新日志</span></a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container mt-3">
+    <div class="row">
+      <div class="col-12">
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleControls" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleControls" data-slide-to="1"></li>
+            <li data-target="#carouselExampleControls" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <a href="/act/20230601/index.html"><img class="d-block w-100" src="https://img1.imgtp.com/2023/08/25/l8xdnb7F.jpg" alt="2023-六一"></a>
+              <div class="carousel-caption d-none d-md-block">
+                <h5><a href="/act/20230601/index.html">2023-六一</a></h5>
               </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/anx/updates.html">更新日志<span class="sr-only">更新日志</span></a>
-            </li>
-          </ul>
+            </div>
+            <div class="carousel-item">
+              <a href="/act/202304/index.html"><img class="d-block w-100" src="https://img1.imgtp.com/2023/08/25/wYvtjpl0.jpg" alt="2023-春游"></a>
+              <div class="carousel-caption d-none d-md-block">
+                <h5><a href="/act/202304/index.html">2023-春游</a></h5>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <a href="/act/202211/index.html"><img class="d-block w-100" src="https://img1.imgtp.com/2023/08/25/UxZY0zsR.jpg" alt="2022-运动会"></a>
+              <div class="carousel-caption d-none d-md-block">
+                <h5><a href="/act/202211/index.html">2022-运动会</a></h5>
+              </div>
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">上一页</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">下一页</span>
+          </a>
         </div>
       </div>
-    </nav>
-    <div class="container mt-3">
+    </div>
+  </div>
+
+  <div class="lang-select-R">
+    <label for="toggle-mode">深色模式:</label>
+    <input type="checkbox" id="toggle-mode">
+  </div>
+
+  <hr>
+  <h2 class="text-center">班级活动</h2>
+  <hr>
+
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-4 pb-1 pb-md-0">
+        <div class="card">
+          <img class="card-img-top" src="https://img1.imgtp.com/2023/08/25/1xK8ASOk.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">2023-六一</h5>
+            <a href="/act/20230601/index.html" class="btn btn-primary">去看看</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 pb-1 pb-md-0">
+        <div class="card">
+          <img class="card-img-top" src="https://img1.imgtp.com/2023/08/25/YKvEV5Kc.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">2023-春游</h5>
+            <a href="/act/202304/index.html" class="btn btn-primary">去看看</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4 pb-1 pb-md-0">
+        <div class="card">
+          <img class="card-img-top" src="https://img1.imgtp.com/2023/08/25/7pGRnJAL.jpg" alt="Card image cap">
+          <div class="card-body">
+            <h5 class="card-title">2022-运动会</h5>
+            <a href="/act/202211/index.html" class="btn btn-primary">去看看</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <hr>
+    <h2 class="text-center">班级格言：</h2>
+  <hr>
+
+  <footer class="text-center">
+    <div class="container">
       <div class="row">
         <div class="col-12">
-          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleControls" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleControls" data-slide-to="1"></li>
-              <li data-target="#carouselExampleControls" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <a href="/act/20230601/index.html"><img class="d-block w-100" src="anx/img/center1.jpg" alt="2023-六一"></a>
-              <div class="carousel-caption d-none d-md-block">
-              <h5><a href="/ct/20230601/index.html">2023-六一</a></h5>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <a href="/act/202304/index.html"><img class="d-block w-100" src="anx/img/center2.jpg" alt="2023-春游"></a>
-                <div class="carousel-caption d-none d-md-block">
-                  <h5><a href="/act/202304/index.html">2023-春游</a></h5>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <a href="/act/202211/index.html"><img class="d-block w-100" src="anx/img/center3.jpg" alt="2022-运动会"></a>
-                <div class="carousel-caption d-none d-md-block">
-                  <h5><a href="/act/202211/index.html">2022-运动会</a></h5>
-                </div>
-              </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">上一页</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">下一页</span>
-            </a>
-          </div>
+          <h4>希望在濯中扬帆，</h4>
+          <h4>梦想在濯中起航。</h4>
         </div>
       </div>
     </div>
-    <hr>
-      <h2 class="text-center">班级活动</h2>
-    <hr>
-    <div class="container">
-      <div class="row text-center">
-        <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
-            <img class="card-img-top" src="anx/img/over1.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">2023-六一</h5>
-            <a href="/act/20230601/index.html" class="btn btn-primary">去看看</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
-            <img class="card-img-top" src="anx/img/over2.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">2023-春游</h5>
-            <a href="/act/202304/index.html" class="btn btn-primary">去看看</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-4 pb-1 pb-md-0">
-          <div class="card">
-            <img class="card-img-top" src="anx/img/over3.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">2022-运动会</h5>
-            <a href="/act/202211/index.html" class="btn btn-primary">去看看</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+  </footer>
+
   <hr>
-    <footer class="text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-	          <h2>班级格言：</h2>
-          </div>
-        </div>
-      </div>
-    </footer>
-	  <hr>
-    <footer class="text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <h4>希望在濯中扬帆，</h4>
-            <h4>梦想在濯中起航。</h4>
-          </div>
-        </div>
-      </div>
-    </footer>
-    <hr>
-      <div class="container text-white bg-dark p-4">
-        <div class="row">
-          <div class="col-md-4 col-6 col-lg-12">
-        <address>
-        <strong> 关上实验学校 2025级2班</strong><br>
-        </address>
-        <address>
-          <strong>鸣谢：</strong><br>
-          陈旭
-        </address>
-	      <address>
-          <strong>意见反馈：</strong><br>
+
+  <div class="container text-white bg-dark p-4">
+    <div class="row">
+      <div class="col-md-4 col-6 col-lg-12">
+      <address>
+      <strong> 关上实验学校 2025级2班</strong><br>
+      </address>
+      <address>
+      <strong>鸣谢：</strong><br>
+        陈旭
+      </address>
+      <address>
+        <strong>意见反馈：</strong><br>
         gssy2023eb@163.com
-        </address>
-		    <address>
-        <strong>开发者：</strong><br>
+      </address>
+      <address>
+        <strong>开发者：李昕</strong><br>
           <a href="https://lixin2009.github.io/">个人网站</a><br>
-		      <a href="https://space.bilibili.com/1539105583?spm_id_from=333.337.0.0">Bilibili</a>
+   	      <a href="https://space.bilibili.com/1539105583?spm_id_from=333.337.0.0">Bilibili</a>
         </address>
       </div>
     </div>
   </div>
+
   <hr>
-	<address></address>
-    <footer class="text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-12">
-            <p>Copyright © lixin. All rights reserved.</p>
-            <p>注：本网站托管于Github，感谢所有对本网站提供支持及帮助的个人及团队！</p>
-            <a href="https://github.com/gssy2025eb/gssy2025eb.github.io.git" class="btn btn-primary">前往Github仓库</a>
-            <a href="/anx/updates.html" class="btn btn-primary">更新日志</a>
-          </div>
+
+  <footer class="text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <p>Copyright © lixin. All rights reserved.</p>
+          <p>注：本网站托管于Github，感谢所有对本网站提供支持及帮助的个人及团队！</p>
+          <a href="https://github.com/gssy2025eb/gssy2025eb.github.io.git" class="btn btn-primary">前往Github仓库</a>
+          <a href="/anx/updates.html" class="btn btn-primary">更新日志</a>
         </div>
       </div>
-    </footer>
-    <br>
-    <script src="anx/js-css/jquery.js"></script>
-    <script src="anx/js-css/popper.js"></script>
-    <script src="anx/js-css/bootstrap.js"></script>
-  </body>
+    </div>
+  </footer>
+
+  <hr>
+  <script>
+    document.addEventListener('DOMContentLoaded', function() {
+      var langSelect = document.getElementById("lang-select");
+      langSelect.addEventListener('change', function() {
+        if (langSelect.value === 'English') {
+          window.location.href = '/English.html';
+        }
+        if (langSelect.value === '繁體中文') {
+          window.location.href = '/Traditional.html';
+        }
+      });
+    });
+    document.addEventListener('DOMContentLoaded', function() {
+      var toggleMode = document.getElementById('toggle-mode');
+      toggleMode.addEventListener('change', function() {
+      var darkMode = document.getElementById('dark-mode');
+        if (toggleMode.checked) {
+          darkMode.href = '/anx/js-css/dark.css';
+        } else {
+          darkMode.href = '/anx/js-css/color.css';
+        }
+      });
+    });
+  </script>
+  <br>
+  <script src="/anx/js-css/jquery.js"></script>
+  <script src="/anx/js-css/popper.js"></script>
+  <script src="/anx/js-css/bootstrap.js"></script>
+</body>
 </html>
