--- a/act/20230601/index.html
+++ b/act/20230601/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>2023六一-图片</title>
-    <link href="css/color.css" rel="stylesheet">
+    <link href="/anx/js-css/color.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="https://gssy2022eb.github.io/"><strong>初一（2）班</strong></a>
+      <a class="navbar-brand" href="/index.html"><strong>初一（2）班</strong></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
@@ -42,7 +42,7 @@
           <div class="col-12">
             <p>Copyright © lixin. All rights reserved.</p>
             <p>注：本网站托管于Github，感谢所有对本网站提供支持的个人及团队！</p>
-            <a href="https://gssy2025eb.github.io/index.html" class="btn btn-primary">返回主页</a>
+            <a href="/index.html" class="btn btn-primary">返回主页</a>
             <a href="https://github.com/gssy2025eb/gssy2025eb.github.io.git" class="btn btn-primary">前往Github仓库</a>
           </div>
         </div>
